Merging Spring branch into Alpha branch
git-svn-id: http://svn.openmrs.org/branches/alpha@1128 5bac5841-c719-aa4e-b3fe-cce5062f897a